fix the bug that pdf isn't showing properly on mobile

--- a/frontend/src/pages/Resume.css
+++ b/frontend/src/pages/Resume.css
@@ -30,7 +30,7 @@
 
 .page-container {
   border-radius: 8px;
-  margin: 1em;
+  margin-top: 1em;
   overflow: hidden;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
